--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #1F1F1F;
 }
 
 .Navbar.box {
@@ -10,4 +11,12 @@
     align-items: center;
     width: 100%;
     height: 100%;
+}
+
+.Navbar.box a {
+    color: #fff;
+}
+
+.Navbar.box a.active {
+    color: #FA4B00;
 }
